--- a/index.html
+++ b/index.html
@@ -9,40 +9,40 @@
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="init()">
     <div class="container">
         <div class="card quizCard">
             <img src="./img/hogwarts.jpg" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Frage</h5>
+              <h5 class="card-title" id="questionText">Frage</h5>
 
               <div class="card mb-2">
-                <div class="card-body">
+                <div class="card-body" id="answer1">
                   Antwort
                 </div>
               </div>
 
               <div class="card mb-2">
-                <div class="card-body">
+                <div class="card-body" id="answer2">
                   Antwort
                 </div>
               </div>
 
               <div class="card mb-2">
-                <div class="card-body">
+                <div class="card-body" id="answer3">
                   Antwort
                 </div>
               </div>
               
               <div class="card mb-2">
-                <div class="card-body">
+                <div class="card-body" id="answer4">
                   Antwort
                 </div>
               </div>
 
               <div class="questionFooter">
                 <span>
-                  <b>1</b> von <b>5</b> Fragen
+                  <b>1</b> von <b id="numberQuestions"></b> Fragen
                 </span>
                 <button class="btn btn-primary btnPurple">Nächste Frage</button>
               </div>
