--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
             <div class="card-body">
               <h5 class="card-title" id="questionText">Frage</h5>
 
-              <div class="card mb-2">
+              <div class="card mb-2 quizAnswerCard" onclick="answer(answer1)">
                 <div class="card-body" id="answer1">
                   Antwort
                 </div>
               </div>
 
-              <div class="card mb-2">
+              <div class="card mb-2 quizAnswerCard" onclick="answer(answer2)">
                 <div class="card-body" id="answer2">
                   Antwort
                 </div>
               </div>
 
-              <div class="card mb-2">
+              <div class="card mb-2 quizAnswerCard" onclick="answer(answer3)">
                 <div class="card-body" id="answer3">
                   Antwort
                 </div>
               </div>
               
-              <div class="card mb-2">
+              <div class="card mb-2 quizAnswerCard" onclick="answer(answer4)">
                 <div class="card-body" id="answer4">
                   Antwort
                 </div>
