button_diabled_enabled

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span>
                   <b>1</b> von <b id="numberQuestions"></b> Fragen
                 </span>
-                <button class="btn btn-primary btnPurple">Nächste Frage</button>
+               <button disabled id="nextButton" class="btn btn-primary btnPurple">Nächste Frage</button>
               </div>
             </div>
           </div>    
