--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
               <div class="questionFooter">
                 <span>
-                  <b>1</b> von <b id="numberQuestions"></b> Fragen
+                  <b id="numberCurrentQuestion">1</b> von <b id="numberQuestions"></b> Fragen
                 </span>
                <button disabled id="nextButton" class="btn btn-primary btnPurple" onclick="nextQuestion()">Nächste Frage</button>
               </div>
