--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="init()">
     <div class="container">
-        <div class="card quizCard">
+        <div class="card quizCard" id="quizCard">
             <img src="./img/hogwarts.jpg" class="card-img-top">
             <div class="card-body" id="cardBody">
               <h5 class="card-title" id="questionText">Frage</h5>
