--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="card quizCard" id="quizCard">
             <img src="./img/hogwarts.jpg" class="card-img-top">
             <div class="progress">
-              <div class="progress-bar" id="progressBar" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" id="progressBar" role="progressbar" style="background-color: #6B63B5" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <div class="card-body" id="cardBody">
               <h5 class="card-title" id="questionText">Frage</h5>
